Fix flicker when closing drawer
Bug: 1325213

--- a/front_end/ui/legacy/splitWidget.css
+++ b/front_end/ui/legacy/splitWidget.css
@@ -35,7 +35,7 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  contain: size style;
+  contain: paint size style;
 }
 
 .shadow-split-widget-sidebar {
